# Generated by `npm run er:diagram -w @athletic/web`. Do not edit by hand.
#
# The source of truth is apps/web/src/lib/db/schema.ts. `er-diagram.test.ts`
# fails when this file and the schema disagree, so a new table cannot ship
# without appearing here — and Confluence is published from this file.

## training — A person’s own training
# The replicated set: every row belongs to exactly one account, cascades from it, and is held in full on the device. The exercise library is the catalogue in code, not a table: exercises holds only pre-catalogue rows, read as aliases, so the lines into it are dotted.

erDiagram
  user {
    text id PK
    text name "nullable"
    text email "nullable"
    timestamp emailVerified "nullable"
    text image "nullable"
    text role
    timestamp created_at
  }
  patterns {
    text id PK
    text user_id PK
    timestamp updated_at
    timestamp deleted_at "nullable"
    bigint seq
    text key "nullable"
    text name
    text role
    bool counts
    int position
  }
  exercises {
    text id PK
    text user_id PK
    timestamp updated_at
    timestamp deleted_at "nullable"
    bigint seq
    text name
    text pattern_id FK
    text where
    jsonb tags
    text description
    jsonb images
  }
  slots {
    text id PK
    text user_id PK
    timestamp updated_at
    timestamp deleted_at "nullable"
    bigint seq
    text key "nullable"
    text name
    text required_role
    int position
    int session_index "nullable"
    jsonb pattern_keys "nullable"
    text day_key "nullable"
  }
  split_periods {
    text id PK
    text user_id PK
    timestamp updated_at
    timestamp deleted_at "nullable"
    bigint seq
    text split
    int days
    text start_week
    jsonb pattern_keys
  }
  program_entries {
    text id PK
    text user_id PK
    timestamp updated_at
    timestamp deleted_at "nullable"
    bigint seq
    int session_index
    text slot_id FK
    text exercise_id FK "nullable"
    int sets
    text rep_range
    float start_weight "nullable"
    text note
  }
  set_logs {
    text id PK
    text user_id PK
    timestamp updated_at
    timestamp deleted_at "nullable"
    bigint seq
    text date
    text session
    text exercise_id FK
    int set_no
    float weight "nullable"
    int reps "nullable"
    int rir "nullable"
    text note
  }
  body_logs {
    text id PK
    text user_id PK
    timestamp updated_at
    timestamp deleted_at "nullable"
    bigint seq
    text date
    float weight
    text note
  }
  goals {
    text id PK
    text user_id PK
    timestamp updated_at
    timestamp deleted_at "nullable"
    bigint seq
    text exercise_id FK
    float target
    float baseline
    text started_on
    text target_date
    timestamp retired_at "nullable"
  }
  profiles {
    text id PK
    text user_id PK
    timestamp updated_at
    timestamp deleted_at "nullable"
    bigint seq
    bool onboarded
    text split
    int days
    text where
    text bias
    text block_start
    int block_weeks
    text unit
    text lang
    text theme
    text entry_mode
    bool plate_loader
    int height_cm "nullable"
    text sex
    text name
    int birth_year "nullable"
    text avatar "nullable"
    text plan_id FK "nullable"
    int plan_version "nullable"
  }

  exercises }o..o| goals : "is set on"
  exercises }o..o| program_entries : "schedules"
  exercises }o..o| set_logs : "records"
  patterns ||--o{ exercises : "is classified by"
  slots ||--o{ program_entries : "fills"
  user ||--o{ body_logs : "owns"
  user ||--o{ exercises : "owns"
  user ||--o{ goals : "owns"
  user ||--o{ patterns : "owns"
  user ||--o{ program_entries : "owns"
  user ||--o{ set_logs : "owns"
  user ||--o{ slots : "owns"
  user ||--o{ split_periods : "owns"
  user ||--o| profiles : "owns"

## plans — Plans and sharing
# Deliberately outside the replicated set — the only rows in the system written by one person and read by another.

erDiagram
  user {
    text id PK
    text name "nullable"
    text email "nullable"
    timestamp emailVerified "nullable"
    text image "nullable"
    text role
    timestamp created_at
  }
  plans {
    text id PK
    text owner_id FK
    text name
    text description
    int days
    text where
    int version
    timestamp published_at "nullable"
    timestamp archived_at "nullable"
    timestamp created_at
    timestamp updated_at
  }
  plan_slots {
    text id PK
    text plan_id FK
    int session_index
    int position
    text key "nullable"
    text name
    text required_role
    jsonb pattern_keys "nullable"
    text day_key "nullable"
    text exercise_name "nullable"
    int sets
    text rep_range
  }
  user_groups {
    text id PK
    text owner_id FK
    text name
    timestamp created_at
  }
  group_members {
    text group_id PK
    text user_id PK
    timestamp added_at
  }
  plan_shares {
    text id PK
    text plan_id FK
    text target_user_id FK "nullable"
    text group_id FK "nullable"
    timestamp shared_at
    timestamp revoked_at "nullable"
  }
  plan_events {
    text id PK
    timestamp at
    text actor_id FK "nullable"
    text action
    text plan_id FK "nullable"
    text plan_name "nullable"
    text group_id FK "nullable"
    text group_name "nullable"
    jsonb detail "nullable"
  }
  profiles {
  }

  plans ||--o{ plan_events : "is named by"
  plans ||--o{ plan_shares : "owns"
  plans ||--o{ plan_slots : "owns"
  plans }o..o| profiles : "applied a copy of"
  user ||--o{ group_members : "owns"
  user ||--o{ plan_events : "is named by"
  user ||--o{ plan_shares : "owns"
  user ||--o{ plans : "owns"
  user ||--o{ user_groups : "owns"
  user_groups ||--o{ group_members : "owns"
  user_groups ||--o{ plan_events : "is named by"
  user_groups ||--o{ plan_shares : "owns"

## auth — Authentication
# Auth.js tables plus the sign-in throttle. A session is a row, which is what makes revocation a delete.

erDiagram
  user {
    text id PK
    text name "nullable"
    text email "nullable"
    timestamp emailVerified "nullable"
    text image "nullable"
    text role
    timestamp created_at
  }
  account {
    text userId FK
    text type
    text provider PK
    text providerAccountId PK
    text refresh_token "nullable"
    text access_token "nullable"
    int expires_at "nullable"
    text token_type "nullable"
    text scope "nullable"
    text id_token "nullable"
    text session_state "nullable"
  }
  session {
    text sessionToken PK
    text userId FK
    timestamp expires
  }
  verificationToken {
    text identifier PK
    text token PK
    timestamp expires
  }
  sign_in_attempts {
    text id PK
    text email
    text client
    timestamp created_at
  }

  user ||--o{ account : "owns"
  user ||--o{ session : "owns"
